[package]
name = "ssl-expiration"
version = "0.1.0"
description = "Checks SSL certificate expiration and expose as Prometheus metric"
authors = ["Fredrik Broman <fredrik.broman@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bromaniac/ssl-expiration"
edition = "2021"

[dependencies]
error-chain = "0.12.4"
openssl = "0.10.32"
openssl-sys = "0.9.60"
prometheus_exporter_base = { version = "1.3.0", features = ["hyper_server"] }
tokio = { version = "1.15.0", features = ["full"] }
cached = "0.28.0"

[[bin]]
name = "ssl-expiration"
test = false
doc = false
