[package]
name = "ssl-exporter"
version = "0.1.0"
description = "Checks SSL certificate expiration and expose it as a Prometheus metric"
authors = ["Fredrik Broman <fredrik.broman@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bromaniac/ssl-exporter"
edition = "2021"

[dependencies]
error-chain = "0.12.4"
openssl = "0.10.32"
openssl-sys = "0.9.60"
prometheus_exporter_base = { version = "1.3.0", features = ["hyper_server"] }
tokio = { version = "1.15.0", features = ["full"] }
cached = "0.28.0"

[[bin]]
name = "ssl-exporter"
test = false
doc = false

[lib]
name = "ssl_expiration"
path  = "src/lib.rs"